# github-file-watcher

./: .env.example  .gitignore  README.md  checker.sh  emailer.py  paths_to_check.example  pyproject.toml
